--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -139,7 +139,7 @@ main {
   flex-wrap: wrap;
   justify-content: center;
   a {
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
   }
   li {
     i {
@@ -164,7 +164,7 @@ main {
 
     a {
       display: block;
-      font-family: 'Merriweather';
+      // font-family: 'Merriweather';
       text-align: center;
       padding: 1rem 0;
       text-decoration: none;
@@ -243,8 +243,9 @@ main {
   padding-left: 30px;
 }
 .post {
-  font-family: "Merriweather", sans-serif;
-  font-weight: 300;
+  // font-family: "Merriweather", sans-serif;
+  font-family: "Nanum Gothic", sans-serif;
+  // font-weight: 300;
   color: #222;
   line-height: 1.9em;
   p {
@@ -286,7 +287,8 @@ main {
   transition: width 0.1s;
 }
 table {
-  th, td {
+  th,
+  td {
     padding: 8px 13px;
     border: 1px solid #dfe2e5;
   }
@@ -328,7 +330,7 @@ footer {
     flex-direction: column;
     align-items: center;
     margin: 0 40px;
-    @media screen and (max-width: $smallMobileW){
+    @media screen and (max-width: $smallMobileW) {
       margin: 0 20px;
     }
     border-top: 1px solid #eee;
