feat: 카테고리 페이지 추가 및 css 수정

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,9 @@
       {%- if site.plainwhite.tagline -%}
       <p class="tagline">{{ site.plainwhite.tagline }}</p>
       {%- endif -%}
+      {%- if site.plainwhite.intro -%}
+      <p class="intro">{{ site.plainwhite.intro }}</p>
+      {%- endif -%}
       </div>
       {% capture footer %}
       {%- if site.plainwhite.social_links != '' -%}
