--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -86,12 +86,18 @@ main {
       height: auto;
       padding: 5vh 30px;
       .about-header .intro {
+        margin: 12px 0;
+      }
+      .about-header.condensed .intro {
         margin: 12px 0 0 0;
       }
     }
     @media screen and (max-width: $smallMobileW) {
       padding: 5vh 20px;
       .about-header .intro {
+        margin: 12px 0;
+      }
+      .about-header.condensed .intro {
         margin: 12px 0 0 0;
       }
     }
@@ -125,9 +131,6 @@ main {
       white-space: pre-wrap;
       line-height: 0.8em;
     }
-    // .about-header.condensed .intro {
-    //   margin: 12px 0;
-    // }
     img {
       max-width: 150px;
     }
