fix: UI 개선 위해 css, html class 수정
모바일 및 데스크톱 UI / UX 상에 게시물 구분이 힘들어 수정함.

--- a/_layouts/category_archive.html
+++ b/_layouts/category_archive.html
@@ -31,7 +31,7 @@ layout: default
       <h3 class="archive__subtitle">{{ category[0] }}</h3>
       <div class="entries-{{ page.entries_layout | default: 'list' }}">
         {% for post in category.last %}
-        <li>
+        <li class="entries-box">
           {%- assign date_format = site.plainwhite.date_format | default: "%b
           %-d, %Y" -%}
           <a class="entries-link" href="{{ post.url | relative_url }}">
