fix: 제목 호버 시 색상 변하도록 수정 및 프로필 이미지 경로 수정

--- a/_sass/dark.scss
+++ b/_sass/dark.scss
@@ -73,6 +73,10 @@
   }
   .category-section .entries-title {
     margin-bottom: 0;
+    transition: color 0.1s;
+  }
+  .category-section .entries-title:hover {
+    color: #ddd;
   }
   .category-section .entries-date {
     font-size: 0.8em;
