fix: 포스트 게시물 클릭 영역 확대
기존 포스트 내용을 확인하기 위해서는 제목 클릭만 가능하여 게시물 확인이 어려운 점이 있어,
선택 영역 확대함.

--- a/_layouts/category_archive.html
+++ b/_layouts/category_archive.html
@@ -31,10 +31,13 @@ layout: default
       <h3 class="archive__subtitle">{{ category[0] }}</h3>
       <div class="entries-{{ page.entries_layout | default: 'list' }}">
         {% for post in category.last %}
-        <li class="entries-box">
+        <li
+          class="entries-box"
+          onclick="hrefLink('{{ post.url | relative_url }}')"
+        >
           {%- assign date_format = site.plainwhite.date_format | default: "%b
           %-d, %Y" -%}
-          <a class="entries-link" href="{{ post.url | relative_url }}">
+          <a class="entries-link">
             <h2 class="entries-title">{{ post.title | escape }}</h2>
           </a>
           <div class="entries-meta">
