fix: back to top 호버 시 css 딜레이 수정

--- a/_sass/dark.scss
+++ b/_sass/dark.scss
@@ -100,7 +100,7 @@
     border-bottom: 1px solid rgb(52, 56, 58);
     // padding: 10px 0;
     padding-bottom: 10px;
-    transition: border-bottom 0.1s;
+    transition: all 0.1s;
   }
 
   .social [class^="icon-"] {
