fix: 카테고리, 포스트 화면 가독성 개선
게시물 호버 시 구분 액션 추가함.
게시물 구분선 추가함.
게시물 본문 제목 크기 키움.

--- a/_layouts/category_archive.html
+++ b/_layouts/category_archive.html
@@ -13,9 +13,9 @@ layout: default
     <ul class="category-index">
       {% for i in (1..categories_max) reversed %} {% for category in
       site.categories %} {% if category[1].size == i %}
-      <li>
+      <li class="category-index-box">
         <a href="#{{ category[0] | slugify }}">
-          <strong>{{ category[0] }}</strong>
+          <strong class="category-index-name">{{ category[0] }}</strong>
           <span class="category-index-count">{{ i }}</span>
         </a>
       </li>
@@ -50,7 +50,9 @@ layout: default
             {%- if site.show_excerpts -%} {{ post.excerpt }} {%- endif -%}
           </div>
         </li>
-        {% endfor %}
+        {% unless forloop.last %}
+        <hr class="post-separation" />
+        {% endunless %} {% endfor %}
       </div>
       <a href="#category-list" class="back-to-top"
         >{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top'
