--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -207,11 +207,23 @@ main {
   margin-bottom: 0 !important;
 }
 .post-box {
-  margin-bottom: 40px;
+  // margin-bottom: 40px;
+  transition: all 0.2s;
   cursor: pointer;
 }
-.post-box:hover .post-title {
-  color: #aaa;
+.post-box:hover {
+  transform: translateX(10px);
+
+  .post-title,
+  .post-date,
+  .post {
+    color: #c5c5c5;
+  }
+
+  .post-categories li {
+    background-color: #292929;
+    color: #ccc;
+  }
 }
 .post-box .sm-font {
   line-height: 0.9em;
@@ -273,8 +285,11 @@ main {
 
 .post-title {
   line-height: 1.2em;
-  font-size: 22px;
+  font-size: 28px;
   margin-bottom: 10px;
+}
+.post-box .post-title {
+  font-size: 22px;
 }
 .posts,
 .post-container {
@@ -326,6 +341,12 @@ main {
   display: flex;
   align-items: baseline;
   border-bottom: 1px solid #eee;
+}
+.post-separation {
+  border: 0px;
+  height: 1px;
+  background-color: #333 !important;
+  margin: 20px 0;
 }
 
 #posts-label {
