--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,11 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link href="https://fonts.googleapis.com/css?family=Merriweather:300|Raleway:400,700" rel="stylesheet">
 <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+<link
+rel="shortcut icon"
+type="image/x-icon"
+href="{{ site.favicon | default: '/assets/resume/favicon.ico' | relative_url }}"
+/>
 <title>{{ page.title | default: site.title }}</title>
 {% seo %}
 {% if site.plainwhite.dark_mode %}
