--- a/_sass/dark.scss
+++ b/_sass/dark.scss
@@ -125,7 +125,7 @@
 
   #posts-label {
     color: $dark_text_color;
-    border-bottom: 1px solid #272727;
+    // border-bottom: 1px solid #272727;
   }
 
   @import "ext/solarized-dark";
