fix: 카테고리 인덱스 폰트 크기 변경

--- a/_sass/dark.scss
+++ b/_sass/dark.scss
@@ -28,6 +28,9 @@
     color: #8b949e;
   }
 
+  .category-index-name {
+    font-size: 0.9em;
+  }
   .category-index-box:hover {
     .category-index-name,
     .category-index-count {
@@ -125,7 +128,6 @@
 
   #posts-label {
     color: $dark_text_color;
-    // border-bottom: 1px solid #272727;
   }
 
   @import "ext/solarized-dark";
