--- a/_includes/resume/footer.html
+++ b/_includes/resume/footer.html
@@ -1,8 +1,8 @@
 <div class="container footer-container">
   <p>
-    {{ site.name | escape }} -
-    <a href="mailto:{{ site.email }}" target="_blank"
-      >{{ site.email | escape }}</a
+    {{ site.resume_name | escape }} -
+    <a href="mailto:{{ site.resume_email }}" target="_blank"
+      >{{ site.resume_email | escape }}</a
     >
     {%- if site.footer_show_references -%} &nbsp;- {{ site.references_title |
     default: "References on request" }} {%- endif -%}
