--- a/_includes/resume/head.html
+++ b/_includes/resume/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>{{ site.name }} | {{ site.title }}</title>
+  <title>{{ site.resume_name }} | {{ site.resume_title }}</title>
   {%- seo title=false -%}
 
   <link
@@ -16,9 +16,15 @@
     href="{{ site.favicon | default: '/assets/resume/favicon.ico' | relative_url }}"
   />
 
-  {%- if jekyll.environment == 'production' and site.google_analytics -%} {%-
-  include google-analytics.html -%} {%- endif -%} {%- if jekyll.environment ==
-  'production' and site.gtm -%} {%- include resume/gtm_head.html -%} {%- endif
-  -%} {%- if jekyll.environment == 'production' and site.gtag -%} {%- include
-  gtag.html -%} {%- endif -%}
+  {%- if jekyll.environment == 'production' and site.google_analytics -%} 
+    {%- include google-analytics.html -%}
+  {%- endif -%} 
+  
+  {%- if jekyll.environment == 'production' and site.gtm -%} 
+    {%- include resume/gtm_head.html -%}
+  {%- endif -%} 
+  
+  {%- if jekyll.environment == 'production' and site.gtag -%} 
+    {%- include gtag.html -%}
+  {%- endif -%}
 </head>
