--- a/_includes/resume/header.html
+++ b/_includes/resume/header.html
@@ -1,8 +1,8 @@
 <div class="container header-container">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
-      <h1>{{ site.name | escape }}</h1>
-      <h2>{{ site.title | escape }}</h2>
+      <h1>{{ site.resume_name | escape }}</h1>
+      <h2>{{ site.resume_title | escape }}</h2>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 header-right">
       <ul class="icons no-print">
@@ -106,9 +106,9 @@
         {% endfor %}
       </ul>
 
-      {%- if site.email -%}
+      {%- if site.resume_email -%}
         <p>
-          {{ site.email_title | default: "Email" }}: <a href="mailto:{{ site.email }}" target="_blank">{{ site.email | escape }}</a>
+          {{ site.email_title | default: "Email" }}: <a href="mailto:{{ site.resume_email }}" target="_blank">{{ site.resume_email | escape }}</a>
         </p>
       {%- endif -%}
       {%- if site.phone -%}
