--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -2,26 +2,60 @@
 <html lang="{{ page.lang | default: site.lang | default: 'en' }}">
   {%- include resume/head.html -%}
 
-  <body
-    class="{% if site.darkmode == true and site.darkmode != 'never' %}dark{% endif %}"
-  >
+  <body class="{% if site.darkmode == true and site.darkmode != 'never' %}dark{% endif %}">
     {%- include resume/header.html -%}
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        {%- if jekyll.environment == 'production' and site.gtm -%} {%- include
-        gtm_body.html -%} {%- endif -%} {%- include resume/about.html -%} {% for
-        section in site.content %}
-        <div class="container {{ section.layout }}-container">
-          <h3 id="{{ section.title | slugify }}">{{ section.title }}</h3>
-          {% include {{ section.layout | prepend: "section-" | append: ".html"
-          }} content=section.content %}
-        </div>
-        {% endfor %}
+
+        {%- if jekyll.environment == 'production' and site.gtm -%} 
+          {%- include gtm_body.html -%} 
+        {%- endif -%} 
+        
+        {%- include resume/about.html -%} 
+
+        {% if site.data.resume.work-experience.size > 0 %}
+          {% for section in site.data.resume.work-experience %}
+          <div class="container {{ section.layout }}-container">
+            <h3 id="{{ section.title | slugify }}">{{ section.title }}</h3>
+            {% include resume/{{ section.layout | prepend: "section-" | append: ".html" }} content=section.content %}
+          </div>
+          {% endfor %}
+        {% endif %}
+
+        {% if site.data.resume.other-experience.size > 0 %}
+          {% for section in site.data.resume.other-experience %}
+          <div class="container {{ section.layout }}-container">
+            <h3 id="{{ section.title | slugify }}">{{ section.title }}</h3>
+            {% include resume/{{ section.layout | prepend: "section-" | append: ".html" }} content=section.content %}
+          </div>
+          {% endfor %}
+        {% endif %}
+
+        {% if site.data.resume.skill.size > 0 %}
+          {% for section in site.data.resume.skill %}
+          <div class="container {{ section.layout }}-container">
+            <h3 id="{{ section.title | slugify }}">{{ section.title }}</h3>
+            {% include resume/{{ section.layout | prepend: "section-" | append: ".html" }} content=section.content %}
+          </div>
+          {% endfor %}
+        {% endif %}
+
+        {% if site.data.resume.education.size > 0 %}
+          {% for section in site.data.resume.education %}
+          <div class="container {{ section.layout }}-container">
+            <h3 id="{{ section.title | slugify }}">{{ section.title }}</h3>
+            {% include resume/{{ section.layout | prepend: "section-" | append: ".html" }} content=section.content %}
+          </div>
+          {% endfor %}
+        {% endif %}
+        
       </div>
     </main>
 
-    {%- include resume/footer.html -%} {% if site.darkmode == false %}
+    {%- include resume/footer.html -%} 
+    
+    {% if site.darkmode == false %}
     <script src="{{ '/assets/js/index.js' | relative_url }}"></script>
     {% endif %}
   </body>
