style: 포스팅 title과 본문내용 구분자 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,7 @@ layout: default
     </ul>
     {%- endif -%}
   </div>
+  <hr class="post-separation"/>
   <div class="post">{{ content }}</div>
   {%- if site.plainwhite.disqus_shortname -%}
   <div id="disqus_thread" style="margin-top: 25px"></div>
