feat: 포스팅에 댓글 기능을 추가하라

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,27 +21,14 @@ layout: default
   </div>
   <hr class="post-separation"/>
   <div class="post">{{ content }}</div>
-  {%- if site.plainwhite.disqus_shortname -%}
-  <div id="disqus_thread" style="margin-top: 25px"></div>
-  <script>
-    var disqus_config = function () {
-      this.page.url = "{{ page.url | absolute_url }}";
-      this.page.identifier = "{{ page.url | absolute_url }}";
-    };
-    (function () {
-      var d = document,
-        s = d.createElement("script");
-      s.src =
-        "https://{{ site.plainwhite.disqus_shortname }}.disqus.com/embed.js";
-      s.setAttribute("data-timestamp", +new Date());
-      (d.head || d.body).appendChild(s);
-    })();
+  
+  <hr class="post-separation"/>
+  <script src="https://utteranc.es/client.js"
+        repo="wlroh/wlroh.github.io"
+        issue-term="pathname"
+        label="comments"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
   </script>
-  <noscript
-    >Please enable JavaScript to view the
-    <a href="https://disqus.com/?ref_noscript" rel="nofollow"
-      >comments powered by Disqus.</a
-    ></noscript
-  >
-  {%- endif -%}
 </div>
